--- a/src/components/BackDrop/style.css
+++ b/src/components/BackDrop/style.css
@@ -10,11 +10,13 @@
         height: 100%;
         width: 100%;
         z-index: 100;
-        transform: translateX(-100%);
-        transition: 0.3s ease-in-out;
+        display: none;
+        /* transform: translateX(-100%);
+        transition: 0.3s ease-in-out; */
     }
     .back-drop__wrapper.open{
-        transform: translateX(0);
+        /* transform: translateX(0); */
+        display: block;
     }
 }
 @media (min-width:640px) and (max-width: 959px) {}
