--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,6 +4,7 @@
 @media (min-width:1200px) {} */
 @media all and (min-width : 240px) {
     .header__wrapper {
+        position: fixed;
         background-color: rgb(54, 52, 52);
         width: 100%;
         display: flex;
