--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -9,7 +9,11 @@
         font-family: Arial, Helvetica, sans-serif;
         text-transform: uppercase;
         font-size: 24px;
-        margin-left: 20px
+        margin-left: 20px;
+    }
+    .logo__text{
+        text-decoration: none;
+        color: white;
     }
 }
 @media (min-width:640px) and (max-width: 959px) {}
