--- a/src/components/ProductStore/style.css
+++ b/src/components/ProductStore/style.css
@@ -4,12 +4,17 @@
 @media (min-width:1200px) {} */
 
 @media all and (min-width : 240px) {
-    .footer{
+    .product-store{
         width: 100%;
-        height: 50px;
-        background-color: darkgray;
-        /* background-image: url(../../pictures/11_Stethem.jpg); */
-        text-align: center;
+        background-color: #dee9e9;
+        height: 600px;
+        overflow: auto;
+    }
+
+    .product-store__list{
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
     }
 }
 @media (min-width:640px) and (max-width: 959px) {}
