--- a/src/components/Registration/style.css
+++ b/src/components/Registration/style.css
@@ -26,23 +26,34 @@
     .login__page-title{
         text-align: center;
         font-size: 24px;
-        margin-top: 10px;
+        margin-top: 5px;
     }
 
     .login__page-form{
         display: flex;
         flex-direction: column;
-        margin-top: 10px;
+        margin-top: 4px;
     }
 
     .login__page-input{
-        margin-top: 10px;
+        margin-top: 4px;
         font-size: 20px;
         padding: 3px 3px;
     }
     .decor_none{
         text-decoration: none;
         color: inherit;
+    }
+    .login__page-invalid{
+        color: red;
+        font-size: 14px;
+        margin-top: 3px;
+    }  
+    .spinner-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 @media (min-width:640px) and (max-width: 959px) {}
