--- a/src/components/ProductStore/style.css
+++ b/src/components/ProductStore/style.css
@@ -13,7 +13,7 @@
 
     .product-store__list{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         flex-wrap: wrap;
     }
 }
