--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -15,6 +15,7 @@
         background-color:  rgba(0, 0, 0, 0.5);
         z-index: 500;
         font-family: Arial, Helvetica, sans-serif;
+        overflow: auto;
     }
 
     .product__card-box{
@@ -24,6 +25,44 @@
         background-color: rgb(255, 236, 221);
         padding: 2% 2%;
     }
+
+    .product__card-title{
+        margin: 2% 0;
+        text-align: center;
+        font-size: 25px;
+        font-weight: bold;
+    }
+
+
+    .product__card-img{
+        display: block;
+        width: 70%;
+        height: 70%;
+        margin: 0 auto;
+    }
+
+    .product__card-btn-wrapper{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .product__card-btn{
+        font-size: 15px;
+        height: 27px;
+        text-transform: uppercase;
+        background-color: rgb(101, 104, 94);
+        color: white;
+        font-weight: bold;
+        border-radius: 7px;
+    }
+    .product__card-price{
+        margin: 5px 0;
+        font-weight: bold;
+    }
+    .hide{
+        display: none;
+    }
+
 }
 @media (min-width:640px) and (max-width: 959px) {}
 @media (min-width:960px) and (max-width: 1199px) {}
