--- a/src/components/ProductItem/style.css
+++ b/src/components/ProductItem/style.css
@@ -41,13 +41,14 @@
         border-top: 2px solid grey;
         display: flex;
         flex-direction: row;
-        /* justify-content: flex-betwee; */
+        justify-content: space-between;
         align-items: center;
     }
     .product-item__price{
         display: inline-block;
+
     }
-    .product-item__button{
+    /* .product-item__button{
         font-size: 15px;
         height: 27px;
         text-transform: uppercase;
@@ -56,7 +57,7 @@
         font-weight: bold;
         border-radius: 7px;
         margin-left: auto;
-    }
+    } */
 }
 @media (min-width:640px) and (max-width: 959px) {}
 @media (min-width:960px) and (max-width: 1199px) {}
