--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -12,6 +12,22 @@
         height: 80px;
         color: rgb(255, 255, 255);
     }
+    .header__card{
+        border: 1px solid grey;
+        padding: 5px 5px;
+        border-radius: 3px;
+        margin: 0 5px;
+    }
+    .header__card:hover{
+        color:rgb(59, 57, 53);
+        background-color: paleturquoise;
+    }
+
+    .header__card-text{
+        display: inline-block;
+        font-size: 16px;
+        margin-left: 5px;
+    }
 
 }
 
