--- a/src/components/AddToCard/style.css
+++ b/src/components/AddToCard/style.css
@@ -14,6 +14,10 @@
         font-weight: bold;
         border-radius: 7px;
     }
+    .product-item__button:hover{
+        background-color: rgb(251, 236, 67);
+        color: rgb(195, 51, 51);
+    }
 }
 @media (min-width:640px) and (max-width: 959px) {}
 @media (min-width:960px) and (max-width: 1199px) {}
