--- a/src/components/ShopingCard/style.css
+++ b/src/components/ShopingCard/style.css
@@ -15,12 +15,13 @@
         background-color:  rgba(0, 0, 0, 0.5);
         z-index: 500;
         font-family: Arial, Helvetica, sans-serif;
+        overflow: auto;
     }
     .shopping__card-store{
         margin: auto auto;
         width: 90%;
         height: max-content;
-        background-color: seashell;
+        background-color: rgb(236, 233, 231);
         padding: 2% 2%;
     }
 
