--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -34,20 +34,22 @@
 
 @media (min-width:640px) and (max-width: 959px) {
     .header__wrapper {
-        background-color: rgb(0, 4, 255);
+        background-color: rgb(54, 52, 52);
     }
 }
 
 
 @media (min-width:960px) and (max-width: 1199px) {
     .header__wrapper {
-        background-color: rgb(0, 255, 64);
+        background-color: rgb(54, 52, 52);
     }
 }
 
 
 @media (min-width:1200px) {
     .header__wrapper {
-        background-color: rgb(255, 123, 0);
+        background-color: rgb(54, 52, 52);
+        width: 1200px;
+        margin: 0 auto;
     }
 }
