--- a/src/components/MenuButton/style.css
+++ b/src/components/MenuButton/style.css
@@ -18,4 +18,8 @@
 }
 @media (min-width:640px) and (max-width: 959px) {}
 @media (min-width:960px) and (max-width: 1199px) {}
-@media (min-width:1200px) {}
+@media (min-width:1200px) {
+    .menu-button{
+        display: none;
+    }
+}
