--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -20,7 +20,7 @@
 
     .product__card-box{
         margin: auto auto;
-        width: 90%;
+        width: 300px;
         height: max-content;
         background-color: rgb(255, 236, 221);
         padding: 2% 2%;
@@ -64,6 +64,14 @@
     }
 
 }
-@media (min-width:640px) and (max-width: 959px) {}
+@media (min-width:640px) and (max-width: 959px) {
+    .product__card-box{
+        margin: auto auto;
+        width: 500px;
+        height: max-content;
+        background-color: rgb(255, 236, 221);
+        padding: 2% 2%;
+    }
+}
 @media (min-width:960px) and (max-width: 1199px) {}
 @media (min-width:1200px) {}
