--- a/src/components/ProductItem/style.css
+++ b/src/components/ProductItem/style.css
@@ -12,7 +12,7 @@
         height: 300px;
         border: 1px solid grey;
         box-sizing: border-box;
-        margin: 10px auto;
+        margin: 10px 3px;
         padding: 10px 10px;
         font-family: Arial, Helvetica, sans-serif;
         cursor: pointer;
