--- a/src/components/ProductStore/style.css
+++ b/src/components/ProductStore/style.css
@@ -19,4 +19,8 @@
 }
 @media (min-width:640px) and (max-width: 959px) {}
 @media (min-width:960px) and (max-width: 1199px) {}
-@media (min-width:1200px) {}
+@media (min-width:1200px) {
+    .product-store__list{
+        height: 700px;
+    }
+}
