--- a/src/components/ShopingCard/style.css
+++ b/src/components/ShopingCard/style.css
@@ -13,7 +13,7 @@
         width: 100%;
         height: 100%;
         background-color:  rgba(0, 0, 0, 0.5);
-        z-index: 500;
+        z-index: 1500;
         font-family: Arial, Helvetica, sans-serif;
         overflow: auto;
     }
@@ -35,20 +35,71 @@
     .shopping__card-table{
         border: 1px solid grey;
         margin: 10px auto;
-        font-size: 19px;
+        font-size: 14px;
     }
 
     .shopping__card-table-cell{
         padding: 3px 3px;
-        border: 1px solid lawngreen;
+        border: 1px solid rgb(133, 175, 91);
     }
 
     .shopping__card-table-action{
         padding: 3px 3px;
-        border: 1px solid red;
         margin-left: 3px;
+        border: 1px solid grey;
+        border-radius: 2px;
+    }
+
+    .total{
+        font-weight: bold;
+        margin: 5px 0;
+    }
+    .fa-plus-circle{
+        color: rgb(49, 197, 23);
+        
+    }
+    .fa-plus-circle:hover{
+        background-color: rgb(49, 197, 23);
+        color: honeydew;
+    }
+    .fa-minus-circle{
+        color: rgb(209, 191, 26);
+    }
+    .fa-minus-circle:hover{
+        background-color: rgb(209, 191, 26);;
+        color: honeydew;
+    }
+    .fa-trash-alt{
+        color: rgb(209, 63, 26);
+    }
+    .fa-trash-alt:hover{
+        background-color: rgb(209, 63, 26);
+        color: honeydew;
+    }
+
+    
+}
+@media (min-width:640px) and (max-width: 959px) {
+    .shopping__card-table{
+        font-size: 19px;
     }
 }
-@media (min-width:640px) and (max-width: 959px) {}
-@media (min-width:960px) and (max-width: 1199px) {}
-@media (min-width:1200px) {}
+@media (min-width:960px) and (max-width: 1199px) {
+    .shopping__card-table{
+        font-size: 20px;
+    }
+}
+@media (min-width:1200px) {
+
+
+    .shopping__card-store{
+        margin: auto auto;
+        width: 600px;
+        height: max-content;
+        background-color: rgb(236, 233, 231);
+        padding: 2% 2%;
+    }
+    .shopping__card-table{
+        font-size: 20px;
+    }
+}
