--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+
+@import './../node_modules/reset-css/reset.css';
+@import './../node_modules/font-awesome/css/font-awesome.css';
+
+ /* bring in normalize.css styles */
 /* @media all and (min-width : 240px) {}
 @media (min-width:640px) and (max-width: 959px) {}
 @media (min-width:960px) and (max-width: 1199px) {}
