--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -48,7 +48,7 @@
         position: fixed;
         width: auto;
         height: auto;
-        right: 0;
+        right: 30%;
         top: 30px;
         background-color: rgb(54, 52, 52);
         box-shadow: none;
